Fix menubar z-index

--- a/src/scss/_header.scss
+++ b/src/scss/_header.scss
@@ -13,6 +13,7 @@
   position: absolute;
   top: 0;
   right: 0;
+  z-index: 10px;
 }
 
 .meta-button-container {
